welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
  avance()
        ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
if (getCouleurSol()!=Color.green){
^